--- a/about.html
+++ b/about.html
@@ -21,8 +21,152 @@
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
-    
-
+    <!-- top ber section start  -->
+    <section id="about_top_ber">
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-lg-4">
+                    <p><i class="fa-solid fa-paper-plane"></i>FREE SHIPING world wide for all orders over <span>$150</span></p>
+                </div>
+                <div class="col-lg-5 about_top_ber_last">
+                    <ul class="d-flex">
+                        <li><a href="#">Track Your Order</a></li>
+                        <li class="nav-item">
+                            <a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              english
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <li><a class="dropdown-item" href="#">bangla</a></li>
+                              <li><a class="dropdown-item" href="#">arabic</a></li>
+                              <li><a class="dropdown-item" href="#">hindi</a></li>
+                            </ul>
+                          </li>
+                          <li class="nav-item">
+                            <a class="dropdown-toggle" href="#" id="navbarDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                              USD
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <li><a class="dropdown-item" href="#">ARC</a></li>
+                              <li><a class="dropdown-item" href="#">BDT</a></li>
+                              <li><a class="dropdown-item" href="#">EUR</a></li>
+                            </ul>
+                          </li>
+                        <li class="ber_icon">
+                            <a href="#">
+                            <ul class="d-flex">
+                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-pinterest-p"></i></a></li>
+                            </ul>
+                        </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- top ber section end  -->
+    <!-- Nav section start  -->
+    <nav class="navbar navbar-expand-lg navbar-light" id="nav">
+        <div class="container">
+          <a class="navbar-brand" href="index.html">
+            <img src="img/Logo.png">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mymenu" aria- 
+           controls="mymenu" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="mymenu">
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link" aria-current="page" href="#" data-bs-toggle="dropdown">Shop<i class="fa-solid 
+                  fa-chevron-down"></i></a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">shop-1</a></li>
+                    <li><a class="dropdown-item" href="#">shop-2</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">shop-3</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link" aria-current="page" href="#" data-bs-toggle="dropdown">Pages<i class="fa-solid 
+                   fa-chevron-down"></i></a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="about.html">shop-1</a></li>
+                    <li><a class="dropdown-item" href="#">shop-2</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">shop-3</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link" aria-current="page" href="#" data-bs-toggle="dropdown">Features<i class="fa-solid 
+                   fa-chevron-down"></i></a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">shop-1</a></li>
+                    <li><a class="dropdown-item" href="#">shop-2</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">shop-3</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link" aria-current="page" href="#" data-bs-toggle="dropdown">Blogs<i class="fa-solid 
+                   fa-chevron-down"></i></a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">shop-1</a></li>
+                    <li><a class="dropdown-item" href="#">shop-2</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">shop-3</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link" aria-current="page" href="#" data-bs-toggle="dropdown">Contact<i class="fa-solid 
+                   fa-chevron-down"></i></a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">shop-1</a></li>
+                    <li><a class="dropdown-item" href="#">shop-2</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">shop-3</a></li>
+                </ul>
+              </li>
+            </ul>
+            <div class="navber_icon ">
+                <ul class="d-flex flex-wrap">
+                    <li>
+                        <button><i class="fa-solid fa-magnifying-glass"></i></button>
+                    </li>
+                    <li>
+                        <button><i class="fa-regular fa-user"></i></button>
+                    </li>
+                    <li>
+                        <button><i class="fa-regular fa-heart"></i></button>
+                    </li>
+                    <li>
+                        <button><i class="fa-solid fa-lock"></i>
+                          <span>0</span>
+                        </button>
+                    </li>
+                </ul>
+            </div>
+          </div>
+        </div>
+    </nav>
+    <!-- Nav section end  -->
+    <!-- About US Banner section start  -->
+    <section id="about_banner">
+        <div class="container h-100">
+            <div class="row h-100 justify-content-center align-items-center">
+                <div class="col-lg-2 text-center">
+                    <h2>About Us</h2>
+                    <p><span>Home</span> / About Us</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- About US Banner section end  -->
 
     <!-- main jquary link  -->
     <!-- <script src="js/jquery-3.6.1.min.js"></script> -->
