--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a class="nav-link" aria-current="page" href="#" data-bs-toggle="dropdown">Pages<i class="fa-solid 
                    fa-chevron-down"></i></a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#">shop-1</a></li>
+                    <li><a class="dropdown-item" href="about.html">shop-1</a></li>
                     <li><a class="dropdown-item" href="#">shop-2</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="#">shop-3</a></li>
@@ -106,7 +106,8 @@
                 </ul>
             </div>
           </div>
-        </nav>
+        </div>
+    </nav>
     <!-- nav section end  -->
     <!-- Banner section start  -->
     <section id="banner" class="px-3">
@@ -758,10 +759,12 @@
           <div class="container h-100">
             <div class="row h-100 align-items-center">
               <div>
-                 <h6>SPECIAL OFFER</h6>
-                 <h2>Beauty Inspired by Real <br> Shine In Life </h2>
-                 <p>Completely grow maintainable niches via tactical services. Progressively synthesize market     positioning paradigms for functional architectures. Professionally aggregate.</p>
-                 <a href="#">Explore More<i class="fa-solid fa-arrow-right-long"></i></a>
+                 <div class="container ms-5">
+                  <h6>SPECIAL OFFER</h6>
+                  <h2>Beauty Inspired by Real <br> Shine In Life </h2>
+                  <p>Completely grow maintainable niches via tactical services. Progressively synthesize market     positioning paradigms for functional architectures. Professionally aggregate.</p>
+                  <a href="#">Explore More<i class="fa-solid fa-arrow-right-long"></i></a>
+                 </div>
               </div>
             </div>
           </div>
