--- a/about.html
+++ b/about.html
@@ -167,6 +167,31 @@
         </div>
     </section>
     <!-- About US Banner section end  -->
+    <!-- About Shop section start  -->
+    <section id="about_shop">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="about_shop_img_shap">
+               <img src="img/about_shop.png" alt="" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-lg-6">
+             <div class="about_shop_content ps-4">
+                 <h2>Learn About Aytor Shop</h2>
+                 <p>Interactively underwhelm effective relationships whereas team driven paradigms. Uniquely impact impactful meta-services vis -a-vis fully tested best practices. Appropriately e-enable fully potentialities and economical.</p>
+                 <hr>
+                 <ul>
+                  <li><i class="fa-solid fa-check"></i>Assertively customize robust potentialities and economical</li>
+                  <li><i class="fa-solid fa-check"></i>Assertively customize robust potentialities and economical</li>
+                  <li><i class="fa-solid fa-check"></i>Assertively customize robust potentialities and economical</li>
+                 </ul>
+             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- About Shop section end  -->
 
     <!-- main jquary link  -->
     <!-- <script src="js/jquery-3.6.1.min.js"></script> -->
