--- a/about.html
+++ b/about.html
@@ -179,19 +179,37 @@
           <div class="col-lg-6">
              <div class="about_shop_content ps-4">
                  <h2>Learn About Aytor Shop</h2>
-                 <p>Interactively underwhelm effective relationships whereas team driven paradigms. Uniquely impact impactful meta-services vis -a-vis fully tested best practices. Appropriately e-enable fully potentialities and economical.</p>
+                 <p>Interactively underwhelm effective relationships whereas team driven paradigms. Uniquely impact impactful meta-services vis -a-vis fully tested best practices. Appropriately e-enable fully.</p>
                  <hr>
                  <ul>
                   <li><i class="fa-solid fa-check"></i>Assertively customize robust potentialities and economical</li>
-                  <li><i class="fa-solid fa-check"></i>Assertively customize robust potentialities and economical</li>
-                  <li><i class="fa-solid fa-check"></i>Assertively customize robust potentialities and economical</li>
+                  <li><i class="fa-solid fa-check"></i>Seamlessly disintermediate distributed intellectual capital.</li>
+                  <li><i class="fa-solid fa-check"></i>Credibly enable B2C potentialities after strategic.</li>
                  </ul>
              </div>
           </div>
+          <div class="about_shop_shap"></div>
         </div>
       </div>
     </section>
     <!-- About Shop section end  -->
+    <!-- About Counter section start  -->
+    <section id="about_counter">
+       <div class="container">
+        <div class="row">
+          <div class="col-lg-3">
+             <div class="about_counter_img m-auto">
+               <img src="img/about_counter_logo_1.png" alt="">
+             </div>
+             <div class="about_counter_content text-center">
+               <h3>22.3k</h3>
+               <p>Products for sale</p>
+             </div>
+          </div>
+        </div>
+       </div>
+    </section>
+    <!-- About Counter section end  -->
 
     <!-- main jquary link  -->
     <!-- <script src="js/jquery-3.6.1.min.js"></script> -->
