--- a/about.html
+++ b/about.html
@@ -202,14 +202,57 @@
                <img src="img/about_counter_logo_1.png" alt="">
              </div>
              <div class="about_counter_content text-center">
-               <h3>22.3k</h3>
+               <h3 class="counter">22.3k</h3>
                <p>Products for sale</p>
+             </div>
+          </div>
+          <div class="col-lg-3">
+             <div class="about_counter_img m-auto">
+               <img src="img/about_counter_logo_2.png" alt="">
+             </div>
+             <div class="about_counter_content text-center">
+               <h3 class="counter">14.6k</h3>
+               <p>Sellers active on shop</p>
+             </div>
+          </div>
+          <div class="col-lg-3">
+             <div class="about_counter_img m-auto">
+               <img src="img/about_counter_logo_3.png" alt="">
+             </div>
+             <div class="about_counter_content text-center">
+               <h3 class="counter">75.9k</h3>
+               <p>Customer active on store</p>
+             </div>
+          </div>
+          <div class="col-lg-3">
+             <div class="about_counter_img m-auto">
+               <img src="img/about_counter_logo_4.png" alt="">
+             </div>
+             <div class="about_counter_content text-center">
+               <h3 class="counter">35.5k</h3>
+               <p>Annual gross sales</p>
              </div>
           </div>
         </div>
        </div>
     </section>
     <!-- About Counter section end  -->
+    <!-- Special offer section start  -->
+    <section id="our_stroy">
+      <div class="col-lg-6 our_stroy_content">
+         <div class="container ms-5">
+          <div class="row">
+             <h3>Our Story</h3>
+             <p>Synergistically pontificate focused services whereas intuitive leadership. Competently predominate ubiquitous services rather than client-centric scenarios. Distinctively mesh B2C benefits for superior customer service. Interactively e-enable inexpensive total linkage without quality materials. Phosfluorescently negotiate.</p>
+             <p>Professionally exploit user-centric technology for seamless solutions. Objectively morph unique strategic theme areas without cross functional mindshare. Synergistically aggregate adaptive functionalities rather than enterprise-wide experiences. Completely maintain.</p>
+          </div>
+         </div>
+      </div>
+      <div class="col-lg-6">
+         <div class="our_story_img"></div>
+      </div>
+    </section>
+    <!-- Special offer section end  -->
 
     <!-- main jquary link  -->
     <!-- <script src="js/jquery-3.6.1.min.js"></script> -->
@@ -220,6 +263,9 @@
     <script src="js/slick.min.js"></script>
     <!-- Time Countdown js link  -->
     <script src="js/jquery.countdown.min.js"></script>
+    <!-- Counter Up Js link  -->
+    <script src="js/waypoints.min.js"></script>
+    <script src="js/jquery.counterup.min.js"></script>
     <!-- main js link  -->
     <script src="js/app.js"></script>
 </body>
