--- a/about.html
+++ b/about.html
@@ -253,6 +253,91 @@
       </div>
     </section>
     <!-- Special offer section end  -->
+    <!-- About Shipping Info section start  -->
+    <section id="about_shipping_info">
+      <div class="container">
+        <div class="row">
+           <div class="col-lg-3">
+              <div class="about_shipping_item d-flex">
+                 <div class="about_shipping_item_img">
+                    <img src="img/shipping_bg.png" alt="">
+                    <img src="img/truck.png" alt="" class="about_shipping_logo">
+                 </div>
+                 <div class="about_shipping_info_content">
+                    <h5>FREE SHIPING</h5>
+                    <p>all orders over <span>$150</span></p>
+                </div>
+              </div>
+           </div>
+           <div class="col-lg-3">
+              <div class="about_shipping_item d-flex">
+                 <div class="about_shipping_item_img">
+                    <img src="img/shipping_bg.png" alt="">
+                    <img src="img/credit.png" alt="" class="about_shipping_logo_1">
+                 </div>
+                 <div class="about_shipping_info_content">
+                    <h5>QUICK PAYMENT</h5>
+                    <p>100% secure payment</p>
+                </div>
+              </div>
+           </div>
+           <div class="col-lg-3">
+              <div class="about_shipping_item d-flex">
+                 <div class="about_shipping_item_img">
+                    <img src="img/shipping_bg.png" alt="">
+                    <img src="img/exchange.png" alt="" class="about_shipping_logo_1">
+                 </div>
+                 <div class="about_shipping_info_content">
+                    <h5>FREE RETURNS</h5>
+                    <p>Return money within 30 days</p>
+                </div>
+              </div>
+           </div>
+           <div class="col-lg-3">
+              <div class="about_shipping_item b_none d-flex">
+                 <div class="about_shipping_item_img">
+                    <img src="img/shipping_bg.png" alt="">
+                    <img src="img/customer-service.png" alt="" class="about_shipping_logo_1">
+                 </div>
+                 <div class="about_shipping_info_content">
+                    <h5>24/7 SUPPORT</h5>
+                    <p>Quick Support</p>
+                </div>
+              </div>
+           </div>
+        </div>
+      </div>
+    </section>
+    <!-- About Shipping Info section end  -->
+    <!-- About Leadershipe section start  -->
+    <section id="leadershipe">
+       <div class="container">
+        <div class="row justify-content-center">
+           <div class="col-lg-4">
+              <div class="leadershipe_title">
+                 <h2>Leadership Expart Team</h2>
+              </div>
+           </div>
+        </div>
+
+        <div class="row leadershipe_card">
+          <div class="card" style="width: 312px;">
+            <img src="img/leader_1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+               <h5 class="text-center">Sudjida Lufz</h5>
+               <p class="text-center">Founder</p>
+               <div class="card-body_icon text-center">
+                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                 <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+               </div>
+            </div>
+          </div>
+        </div>
+       </div>
+    </section>
+    <!-- About Leadershipe section end  -->
 
     <!-- main jquary link  -->
     <!-- <script src="js/jquery-3.6.1.min.js"></script> -->
@@ -264,8 +349,8 @@
     <!-- Time Countdown js link  -->
     <script src="js/jquery.countdown.min.js"></script>
     <!-- Counter Up Js link  -->
-    <script src="js/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
+    <!-- <script src="js/waypoints.min.js"></script> -->
+    <!-- <script src="js/jquery.counterup.min.js"></script> -->
     <!-- main js link  -->
     <script src="js/app.js"></script>
 </body>
