--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@
 
 
     <!-- main jquary link  -->
-    <!-- <script src="js/jquery-3.6.1.min.js"></script> -->
+    <script src="js/jquery-3.6.1.min.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
     <!-- bootstrape js link  -->
     <script src="js/bootstrap.bundle.min.js"></script>
@@ -1037,8 +1037,8 @@
     <!-- Time Countdown js link  -->
     <script src="js/jquery.countdown.min.js"></script>
     <!-- Counter Up Js link  -->
-    <script src="js/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
+    <!-- <script src="js/waypoints.min.js"></script>
+    <script src="js/jquery.counterup.min.js"></script> -->
     <!-- main js link  -->
     <script src="js/app.js"></script>
 </body>
