--- a/index.html
+++ b/index.html
@@ -1037,8 +1037,8 @@
     <!-- Time Countdown js link  -->
     <script src="js/jquery.countdown.min.js"></script>
     <!-- Counter Up Js link  -->
-    <!-- <script src="js/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script> -->
+    <script src="js/waypoints.min.js"></script>
+    <script src="js/jquery.counterup.min.js"></script>
     <!-- main js link  -->
     <script src="js/app.js"></script>
 </body>
