--- a/about.html
+++ b/about.html
@@ -202,7 +202,7 @@
                <img src="img/about_counter_logo_1.png" alt="">
              </div>
              <div class="about_counter_content text-center">
-               <h3 class="counter">22.3k</h3>
+               <h3><span class="counter">22.3k</span></h3>
                <p>Products for sale</p>
              </div>
           </div>
@@ -322,10 +322,62 @@
 
         <div class="row leadershipe_card">
           <div class="card" style="width: 312px;">
-            <img src="img/leader_1.png" class="card-img-top" alt="...">
+            <img src="img/michel.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+               <h5 class="text-center">Michel Richard</h5>
+               <p class="text-center">Founder</p>
+               <div class="card-body_icon text-center">
+                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                 <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+               </div>
+            </div>
+          </div>
+          <div class="card" style="width: 312px;">
+            <img src="img/imon.png" class="card-img-top" alt="...">
+            <div class="card-body">
+               <h5 class="text-center">Imon Hossain</h5>
+               <p class="text-center">Marketer</p>
+               <div class="card-body_icon text-center">
+                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                 <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+               </div>
+            </div>
+          </div>
+          <div class="card" style="width: 312px;">
+            <img src="img/sudjida.png" class="card-img-top" alt="...">
             <div class="card-body">
                <h5 class="text-center">Sudjida Lufz</h5>
-               <p class="text-center">Founder</p>
+               <p class="text-center">Support</p>
+               <div class="card-body_icon text-center">
+                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                 <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+               </div>
+            </div>
+          </div>
+          <div class="card" style="width: 312px;">
+            <img src="img/henrey.png" class="card-img-top" alt="...">
+            <div class="card-body">
+               <h5 class="text-center">Henry Josep</h5>
+               <p class="text-center">Directer</p>
+               <div class="card-body_icon text-center">
+                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                 <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+               </div>
+            </div>
+          </div>
+          <div class="card" style="width: 312px;">
+            <img src="img/mariya.png" class="card-img-top" alt="...">
+            <div class="card-body">
+               <h5 class="text-center">Mariya Rozie</h5>
+               <p class="text-center">Developer</p>
                <div class="card-body_icon text-center">
                  <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                  <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -338,9 +390,55 @@
        </div>
     </section>
     <!-- About Leadershipe section end  -->
+    <!-- Instagrame section start  -->
+    <section id="instagrame">
+       <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-4">
+            <div class="instagrame_title text-center">
+               <h2>@Aetor Instagram</h2>
+            </div>
+         </div>
+        </div>
+
+        <div class="row instagram_slider">
+           <div class="instagram_item">
+              <img src="img/insta_1.jpg" alt="">
+           </div>
+           <div class="instagram_item">
+              <img src="img/insta_1.jpg" alt="">
+           </div>
+           <div class="instagram_item">
+              <img src="img/insta_1.jpg" alt="">
+           </div>
+           <div class="instagram_item">
+              <img src="img/insta_1.jpg" alt="">
+           </div>
+           <div class="instagram_item">
+              <img src="img/insta_1.jpg" alt="">
+           </div>
+           <div class="instagram_item">
+              <img src="img/insta_1.jpg" alt="">
+           </div>
+           <div class="instagram_item">
+              <img src="img/insta_1.jpg" alt="">
+           </div>
+           <div class="instagram_item">
+              <img src="img/insta_1.jpg" alt="">
+           </div>
+           <div class="instagram_item">
+              <img src="img/insta_1.jpg" alt="">
+           </div>
+           <div class="instagram_item">
+              <img src="img/insta_1.jpg" alt="">
+           </div>
+        </div>
+       </div>
+    </section>
+    <!-- Instagrame section end  -->
 
     <!-- main jquary link  -->
-    <!-- <script src="js/jquery-3.6.1.min.js"></script> -->
+    <script src="js/jquery-3.6.1.min.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
     <!-- bootstrape js link  -->
     <script src="js/bootstrap.bundle.min.js"></script>
@@ -349,8 +447,8 @@
     <!-- Time Countdown js link  -->
     <script src="js/jquery.countdown.min.js"></script>
     <!-- Counter Up Js link  -->
-    <!-- <script src="js/waypoints.min.js"></script> -->
-    <!-- <script src="js/jquery.counterup.min.js"></script> -->
+    <script src="js/waypoints.min.js"></script>
+    <script src="js/jquery.counterup.min.js"></script>
     <!-- main js link  -->
     <script src="js/app.js"></script>
 </body>
