--- a/about.html
+++ b/about.html
@@ -403,39 +403,129 @@
 
         <div class="row instagram_slider">
            <div class="instagram_item">
-              <img src="img/insta_1.jpg" alt="">
+              <img src="img/insta_1.jpg" alt="" class="img-fluid">
+              <a href="#" class="insta_btn"><i class="fa-brands fa-instagram"></i></a>
            </div>
            <div class="instagram_item">
-              <img src="img/insta_1.jpg" alt="">
+              <img src="img/insta_2.jpg" alt="" class="img-fluid">
+              <a href="#" class="insta_btn"><i class="fa-brands fa-instagram"></i></a>
            </div>
            <div class="instagram_item">
-              <img src="img/insta_1.jpg" alt="">
+              <img src="img/insta_3.jpg" alt="" class="img-fluid">
+              <a href="#" class="insta_btn"><i class="fa-brands fa-instagram"></i></a>
            </div>
            <div class="instagram_item">
-              <img src="img/insta_1.jpg" alt="">
+              <img src="img/insta_4.jpg" alt="" class="img-fluid">
+              <a href="#" class="insta_btn"><i class="fa-brands fa-instagram"></i></a>
            </div>
            <div class="instagram_item">
-              <img src="img/insta_1.jpg" alt="">
+              <img src="img/insta_5.jpg" alt="" class="img-fluid">
+              <a href="#" class="insta_btn"><i class="fa-brands fa-instagram"></i></a>
            </div>
            <div class="instagram_item">
-              <img src="img/insta_1.jpg" alt="">
+              <img src="img/insta_6.jpg" alt="" class="img-fluid">
+              <a href="#" class="insta_btn"><i class="fa-brands fa-instagram"></i></a>
            </div>
            <div class="instagram_item">
-              <img src="img/insta_1.jpg" alt="">
-           </div>
-           <div class="instagram_item">
-              <img src="img/insta_1.jpg" alt="">
-           </div>
-           <div class="instagram_item">
-              <img src="img/insta_1.jpg" alt="">
-           </div>
-           <div class="instagram_item">
-              <img src="img/insta_1.jpg" alt="">
+              <img src="img/insta_7.jpg" alt="" class="img-fluid">
+              <a href="#" class="insta_btn"><i class="fa-brands fa-instagram"></i></a>
            </div>
         </div>
        </div>
     </section>
     <!-- Instagrame section end  -->
+    <!-- Footer section start  -->
+    <footer id="about_footer">
+       <div class="container">
+          <div class="row">
+             <div class="col-lg-5 about_footer_content">
+                <h3>Subscribe to Our Newsletter!</h3>
+                <p>Authoritatively morph 24/7 potentialities with error-free partnerships. Objectively engineer multimedia.</p>
+             </div>
+             <div class="col-lg-6 ms-auto">
+                <div class="about_footer_input d-flex">
+                   <input type="email" placeholder="Enter your email....">
+                   <input type="button" value="Subscribe">
+                </div>
+             </div>
+             <hr>
+          </div>
+
+          <div class="row about_footer_info">
+             <div class="col-lg-3 about_footer_item">
+                <img src="img/Logo.png" alt="">
+                <p>Progressively optimize effective ideas before turnkey process improvements. Proactively disseminate</p>
+                <div class="about_footer_item_icon">
+                  <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                  <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                  <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                  <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+                </div>
+             </div>
+             <div class="col-lg-2 about_footer_account">
+               <h5>My Account</h5>
+               <ul>
+                 <li><i class="fa-solid fa-chevron-right"></i>My Account</li>
+                 <li><i class="fa-solid fa-chevron-right"></i>View Cart</li>
+                 <li><i class="fa-solid fa-chevron-right"></i>Wishlist</li>
+                 <li><i class="fa-solid fa-chevron-right"></i>Compare</li>
+                 <li><i class="fa-solid fa-chevron-right"></i>New Products</li>
+               </ul>
+             </div>
+             <div class="col-lg-2 about_footer_account">
+               <h5>Support</h5>
+               <ul>
+                 <li><i class="fa-solid fa-chevron-right"></i>Help</li>
+                 <li><i class="fa-solid fa-chevron-right"></i>Contact Us</li>
+                 <li><i class="fa-solid fa-chevron-right"></i>Feedback</li>
+                 <li><i class="fa-solid fa-chevron-right"></i>Customer Service</li>
+                 <li><i class="fa-solid fa-chevron-right"></i>Store Locations</li>
+               </ul>
+             </div>
+             <div class="col-lg-2 about_footer_account">
+               <h5>Shop</h5>
+               <ul>
+                 <li><i class="fa-solid fa-chevron-right"></i>Men's Shopping</li>
+                 <li><i class="fa-solid fa-chevron-right"></i>Women's Shopping</li>
+                 <li><i class="fa-solid fa-chevron-right"></i>Kids' Shopping</li>
+                 <li><i class="fa-solid fa-chevron-right"></i>Discounts</li>
+                 <li><i class="fa-solid fa-chevron-right"></i>New Arrivels</li>
+               </ul>
+             </div>
+             <div class="col-lg-3 about_footer_address">
+               <h5>Contact Us</h5>
+               <div class="footer_location d-flex my-1">
+                 <i class="fa-solid fa-location-dot"></i>
+                 <p>830 Broadway, New York, NY 10003,
+                   United States</p>
+               </div>
+               <div class="footer_phone">
+                 <i class="fa-sharp fa-solid fa-phone"></i>
+                 <a href="callto:+18008660286">+18008660286</a>
+               </div>
+               <div class="footer_mail d-flex my-1">
+                 <i class="fa-regular fa-envelope"></i>
+                 <div>
+                   <a href="mailto:aetor.info@gmail.com">aetor.info@gmail.com</a>
+                   <a href="mailto:info@aetor.com">info@aetor.com</a>
+                 </div>
+               </div>
+             </div>
+          </div>
+       </div>
+       <hr>
+       <div class="container">
+          <div class="row">
+             <div class="col-lg-4 about_footer_copyright">
+                <p>&copy; 2022 All Rights Reserved <span>Aytor</span> By <span>Angfuzsoft</span>.</p>
+             </div>
+             <div class="col-lg-2 about_footer_copyright ms-auto">
+               <img src="img/all.png" alt="">
+             </div>
+          </div>
+       </div>
+    </footer>
+    <!-- Footer section end  -->
 
     <!-- main jquary link  -->
     <script src="js/jquery-3.6.1.min.js"></script>
