--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                    fa-chevron-down"></i></a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="about.html">shop-1</a></li>
-                    <li><a class="dropdown-item" href="#">shop-2</a></li>
+                    <li><a class="dropdown-item" href="shopGrid.html">shop-2</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="#">shop-3</a></li>
                 </ul>
@@ -770,6 +770,7 @@
           </div>
         </div>
         <div class="col-6 special_offer_img">
+           <a href="#" class="play_btn"><i class="fa-solid fa-play"></i></a>
         </div>
       </div>
     </section>
