--- a/shopGrid.html
+++ b/shopGrid.html
@@ -167,6 +167,45 @@
         </div>
     </section>
     <!-- Shop Grid Banner section end  -->
+    <!-- Shop Grid products List section start  -->
+    <section id="shop_grid_product">
+       <div class="container">
+        <div class="row justify-content-between">
+           <div class="col-lg-3">
+             <div class="shop_grid_product_icon d-flex flex-wrap">
+                <a href="#"><i class="fa-solid fa-list"></i></a>
+                <a href="#"><i class="fa-solid fa-list"></i></a>
+                <div class="shop_grid_product_text">
+                  <h6>Showing 12 of 16 Post</h6>
+                </div>
+             </div>
+           </div>
+           <div class="col-lg-3">
+            <select class="form-select" aria-label="Default select example">
+              <option selected>Default sorting</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+           </div>
+        </div>
+
+        <div class="row">
+           <div class="col-lg-3">
+              <div class="shop_grid_product_img">
+                 <img src="img/product_1_1.png" alt="">
+                 <div class="shop_grid_product_icon_btn">
+                  <a href="#" class="product_btn"><i class="fa-solid fa-cart-plus"></i></a>
+                  <a href="#" class="product_btn"><i class="fa-solid fa-heart"></i></a>
+                  <a href="#" class="product_btn"><i class="fa-solid fa-eye"></i></a>
+                  <a href="#" class="product_btn"><i class="fa-solid fa-chart-simple"></i></a>
+                 </div>
+              </div>
+           </div>
+        </div>
+       </div>
+    </section>
+    <!-- Shop Grid products List section end  -->
 
 
 
