--- a/shopGrid.html
+++ b/shopGrid.html
@@ -191,19 +191,312 @@
         </div>
 
         <div class="row">
-           <div class="col-lg-3">
-              <div class="shop_grid_product_img">
-                 <img src="img/product_1_1.png" alt="">
-                 <div class="shop_grid_product_icon_btn">
-                  <a href="#" class="product_btn"><i class="fa-solid fa-cart-plus"></i></a>
-                  <a href="#" class="product_btn"><i class="fa-solid fa-heart"></i></a>
-                  <a href="#" class="product_btn"><i class="fa-solid fa-eye"></i></a>
-                  <a href="#" class="product_btn"><i class="fa-solid fa-chart-simple"></i></a>
-                 </div>
-              </div>
-           </div>
+         <div class="col-lg-3 shop_grid_product_item">
+            <div class="shop_grid_product_img">
+               <img src="img/product_1_1.png" alt="" class="img-fluid">
+               <img src="img/tag-2.png" alt="" class="tag_2">
+               <img src="img/New.png" alt="" class="new_tag">
+               <div class="shop_grid_product_icon_btn">
+                <a href="#" class="product_btn"><i class="fa-solid fa-cart-plus"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-heart"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-eye"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-chart-simple"></i></a>
+               </div>
+            </div>
+            <div class="shop_grid_product_content">
+               <div class="d-flex justify-content-between">
+                  <h6>Spaghetti Hoodie</h6>
+                  <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                  </div>
+                  <!-- <h6>(5)</h6> -->
+               </div>
+               <p>$125.65</p>
+            </div>
+         </div>
+         <div class="col-lg-3 shop_grid_product_item">
+            <div class="shop_grid_product_img">
+               <img src="img/product_1_2.png" alt="" class="img-fluid">
+               <div class="shop_grid_product_icon_btn">
+                <a href="#" class="product_btn"><i class="fa-solid fa-cart-plus"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-heart"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-eye"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-chart-simple"></i></a>
+               </div>
+            </div>
+            <div class="shop_grid_product_content">
+               <div class="d-flex justify-content-between">
+                  <h6>Spaghetti Hoodie</h6>
+                  <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                  </div>
+                  <!-- <h6>(5)</h6> -->
+               </div>
+               <p>$125.65</p>
+            </div>
+         </div>
+         <div class="col-lg-3 shop_grid_product_item">
+            <div class="shop_grid_product_img">
+               <img src="img/product_1_3.png" alt="" class="img-fluid">
+               <img src="img/tag-2.png" alt="" class="tag_2">
+               <img src="img/New.png" alt="" class="new_tag">
+               <div class="shop_grid_product_icon_btn">
+                <a href="#" class="product_btn"><i class="fa-solid fa-cart-plus"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-heart"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-eye"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-chart-simple"></i></a>
+               </div>
+            </div>
+            <div class="shop_grid_product_content">
+               <div class="d-flex justify-content-between">
+                  <h6>Spaghetti Hoodie</h6>
+                  <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                  </div>
+                  <!-- <h6>(5)</h6> -->
+               </div>
+               <p>$125.65</p>
+            </div>
+         </div>
+         <div class="col-lg-3 shop_grid_product_item">
+            <div class="shop_grid_product_img">
+               <img src="img/product_1_4.png" alt="" class="img-fluid">
+               <div class="shop_grid_product_icon_btn">
+                <a href="#" class="product_btn"><i class="fa-solid fa-cart-plus"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-heart"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-eye"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-chart-simple"></i></a>
+               </div>
+            </div>
+            <div class="shop_grid_product_content">
+               <div class="d-flex justify-content-between">
+                  <h6>Spaghetti Hoodie</h6>
+                  <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                  </div>
+                  <!-- <h6>(5)</h6> -->
+               </div>
+               <p>$125.65</p>
+            </div>
+         </div>
+         <div class="col-lg-3 shop_grid_product_item">
+            <div class="shop_grid_product_img">
+               <img src="img/product_1_5.png" alt="" class="img-fluid">
+               <img src="img/tag-2.png" alt="" class="tag_2">
+               <img src="img/New.png" alt="" class="new_tag">
+               <div class="shop_grid_product_icon_btn">
+                <a href="#" class="product_btn"><i class="fa-solid fa-cart-plus"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-heart"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-eye"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-chart-simple"></i></a>
+               </div>
+            </div>
+            <div class="shop_grid_product_content">
+               <div class="d-flex justify-content-between">
+                  <h6>Spaghetti Hoodie</h6>
+                  <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                  </div>
+                  <!-- <h6>(5)</h6> -->
+               </div>
+               <p>$125.65</p>
+            </div>
+         </div>
+         <div class="col-lg-3 shop_grid_product_item">
+            <div class="shop_grid_product_img">
+               <img src="img/product_1_6.png" alt="" class="img-fluid">
+               <div class="shop_grid_product_icon_btn">
+                <a href="#" class="product_btn"><i class="fa-solid fa-cart-plus"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-heart"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-eye"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-chart-simple"></i></a>
+               </div>
+            </div>
+            <div class="shop_grid_product_content">
+               <div class="d-flex justify-content-between">
+                  <h6>Spaghetti Hoodie</h6>
+                  <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                  </div>
+                  <!-- <h6>(5)</h6> -->
+               </div>
+               <p>$125.65</p>
+            </div>
+         </div>
+         <div class="col-lg-3 shop_grid_product_item">
+            <div class="shop_grid_product_img">
+               <img src="img/product_1_7.png" alt="" class="img-fluid">
+               <img src="img/tag-2.png" alt="" class="tag_2">
+               <img src="img/New.png" alt="" class="new_tag">
+               <div class="shop_grid_product_icon_btn">
+                <a href="#" class="product_btn"><i class="fa-solid fa-cart-plus"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-heart"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-eye"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-chart-simple"></i></a>
+               </div>
+            </div>
+            <div class="shop_grid_product_content">
+               <div class="d-flex justify-content-between">
+                  <h6>Spaghetti Hoodie</h6>
+                  <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                  </div>
+                  <!-- <h6>(5)</h6> -->
+               </div>
+               <p>$125.65</p>
+            </div>
+         </div>
+         <div class="col-lg-3 shop_grid_product_item">
+            <div class="shop_grid_product_img">
+               <img src="img/product_1_8.png" alt="" class="img-fluid">
+               <div class="shop_grid_product_icon_btn">
+                <a href="#" class="product_btn"><i class="fa-solid fa-cart-plus"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-heart"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-eye"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-chart-simple"></i></a>
+               </div>
+            </div>
+            <div class="shop_grid_product_content">
+               <div class="d-flex justify-content-between">
+                  <h6>Spaghetti Hoodie</h6>
+                  <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                  </div>
+                  <!-- <h6>(5)</h6> -->
+               </div>
+               <p>$125.65</p>
+            </div>
+         </div>
+         <div class="col-lg-3 shop_grid_product_item">
+            <div class="shop_grid_product_img">
+               <img src="img/product_1_9.png" alt="" class="img-fluid">
+               <img src="img/tag-2.png" alt="" class="tag_2">
+               <img src="img/New.png" alt="" class="new_tag">
+               <div class="shop_grid_product_icon_btn">
+                <a href="#" class="product_btn"><i class="fa-solid fa-cart-plus"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-heart"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-eye"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-chart-simple"></i></a>
+               </div>
+            </div>
+            <div class="shop_grid_product_content">
+               <div class="d-flex justify-content-between">
+                  <h6>Spaghetti Hoodie</h6>
+                  <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                  </div>
+                  <!-- <h6>(5)</h6> -->
+               </div>
+               <p>$125.65</p>
+            </div>
+         </div>
+         <div class="col-lg-3 shop_grid_product_item">
+            <div class="shop_grid_product_img">
+               <img src="img/product_1_10.png" alt="" class="img-fluid">
+               <div class="shop_grid_product_icon_btn">
+                <a href="#" class="product_btn"><i class="fa-solid fa-cart-plus"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-heart"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-eye"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-chart-simple"></i></a>
+               </div>
+            </div>
+            <div class="shop_grid_product_content">
+               <div class="d-flex justify-content-between">
+                  <h6>Spaghetti Hoodie</h6>
+                  <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                  </div>
+                  <!-- <h6>(5)</h6> -->
+               </div>
+               <p>$125.65</p>
+            </div>
+         </div>
+         <div class="col-lg-3 shop_grid_product_item">
+            <div class="shop_grid_product_img">
+               <img src="img/product_1_11.png" alt="" class="img-fluid">
+               <img src="img/tag-2.png" alt="" class="tag_2">
+               <img src="img/New.png" alt="" class="new_tag">
+               <div class="shop_grid_product_icon_btn">
+                <a href="#" class="product_btn"><i class="fa-solid fa-cart-plus"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-heart"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-eye"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-chart-simple"></i></a>
+               </div>
+            </div>
+            <div class="shop_grid_product_content">
+               <div class="d-flex justify-content-between">
+                  <h6>Spaghetti Hoodie</h6>
+                  <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                  </div>
+                  <!-- <h6>(5)</h6> -->
+               </div>
+               <p>$125.65</p>
+            </div>
+         </div>
+         <div class="col-lg-3 shop_grid_product_item">
+            <div class="shop_grid_product_img">
+               <img src="img/product_1_12.png" alt="" class="img-fluid">
+               <div class="shop_grid_product_icon_btn">
+                <a href="#" class="product_btn"><i class="fa-solid fa-cart-plus"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-heart"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-eye"></i></a>
+                <a href="#" class="product_btn"><i class="fa-solid fa-chart-simple"></i></a>
+               </div>
+            </div>
+            <div class="shop_grid_product_content">
+               <div class="d-flex justify-content-between">
+                  <h6>Spaghetti Hoodie</h6>
+                  <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                  </div>
+                  <!-- <h6>(5)</h6> -->
+               </div>
+               <p>$125.65</p>
+            </div>
+         </div>
+
+         <div class="col-lg-3">
+            
+         </div>
         </div>
-       </div>
+        </div>
     </section>
     <!-- Shop Grid products List section end  -->
 
