--- a/shopGrid.html
+++ b/shopGrid.html
@@ -80,7 +80,7 @@
           <div class="collapse navbar-collapse" id="mymenu">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link" aria-current="page" href="#" data-bs-toggle="dropdown">Shop<i class="fa-solid 
@@ -97,7 +97,7 @@
                    fa-chevron-down"></i></a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="about.html">shop-1</a></li>
-                    <li><a class="dropdown-item" href="#">shop-2</a></li>
+                    <li><a class="dropdown-item" href="shopGrid.html">shop-2</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="#">shop-3</a></li>
                 </ul>
@@ -191,7 +191,7 @@
         </div>
 
         <div class="row">
-         <div class="col-lg-3 shop_grid_product_item">
+           <div class="col-lg-3 shop_grid_product_item">
             <div class="shop_grid_product_img">
                <img src="img/product_1_1.png" alt="" class="img-fluid">
                <img src="img/tag-2.png" alt="" class="tag_2">
@@ -216,8 +216,8 @@
                </div>
                <p>$125.65</p>
             </div>
-         </div>
-         <div class="col-lg-3 shop_grid_product_item">
+           </div>
+           <div class="col-lg-3 shop_grid_product_item">
             <div class="shop_grid_product_img">
                <img src="img/product_1_2.png" alt="" class="img-fluid">
                <div class="shop_grid_product_icon_btn">
@@ -240,8 +240,8 @@
                </div>
                <p>$125.65</p>
             </div>
-         </div>
-         <div class="col-lg-3 shop_grid_product_item">
+           </div>
+           <div class="col-lg-3 shop_grid_product_item">
             <div class="shop_grid_product_img">
                <img src="img/product_1_3.png" alt="" class="img-fluid">
                <img src="img/tag-2.png" alt="" class="tag_2">
@@ -266,8 +266,8 @@
                </div>
                <p>$125.65</p>
             </div>
-         </div>
-         <div class="col-lg-3 shop_grid_product_item">
+           </div>
+           <div class="col-lg-3 shop_grid_product_item">
             <div class="shop_grid_product_img">
                <img src="img/product_1_4.png" alt="" class="img-fluid">
                <div class="shop_grid_product_icon_btn">
@@ -290,8 +290,8 @@
                </div>
                <p>$125.65</p>
             </div>
-         </div>
-         <div class="col-lg-3 shop_grid_product_item">
+           </div>
+           <div class="col-lg-3 shop_grid_product_item">
             <div class="shop_grid_product_img">
                <img src="img/product_1_5.png" alt="" class="img-fluid">
                <img src="img/tag-2.png" alt="" class="tag_2">
@@ -316,8 +316,8 @@
                </div>
                <p>$125.65</p>
             </div>
-         </div>
-         <div class="col-lg-3 shop_grid_product_item">
+           </div>
+           <div class="col-lg-3 shop_grid_product_item">
             <div class="shop_grid_product_img">
                <img src="img/product_1_6.png" alt="" class="img-fluid">
                <div class="shop_grid_product_icon_btn">
@@ -340,8 +340,8 @@
                </div>
                <p>$125.65</p>
             </div>
-         </div>
-         <div class="col-lg-3 shop_grid_product_item">
+           </div>
+           <div class="col-lg-3 shop_grid_product_item">
             <div class="shop_grid_product_img">
                <img src="img/product_1_7.png" alt="" class="img-fluid">
                <img src="img/tag-2.png" alt="" class="tag_2">
@@ -366,8 +366,8 @@
                </div>
                <p>$125.65</p>
             </div>
-         </div>
-         <div class="col-lg-3 shop_grid_product_item">
+           </div>
+           <div class="col-lg-3 shop_grid_product_item">
             <div class="shop_grid_product_img">
                <img src="img/product_1_8.png" alt="" class="img-fluid">
                <div class="shop_grid_product_icon_btn">
@@ -390,8 +390,8 @@
                </div>
                <p>$125.65</p>
             </div>
-         </div>
-         <div class="col-lg-3 shop_grid_product_item">
+           </div>
+           <div class="col-lg-3 shop_grid_product_item">
             <div class="shop_grid_product_img">
                <img src="img/product_1_9.png" alt="" class="img-fluid">
                <img src="img/tag-2.png" alt="" class="tag_2">
@@ -416,8 +416,8 @@
                </div>
                <p>$125.65</p>
             </div>
-         </div>
-         <div class="col-lg-3 shop_grid_product_item">
+           </div>
+           <div class="col-lg-3 shop_grid_product_item">
             <div class="shop_grid_product_img">
                <img src="img/product_1_10.png" alt="" class="img-fluid">
                <div class="shop_grid_product_icon_btn">
@@ -440,8 +440,8 @@
                </div>
                <p>$125.65</p>
             </div>
-         </div>
-         <div class="col-lg-3 shop_grid_product_item">
+           </div>
+           <div class="col-lg-3 shop_grid_product_item">
             <div class="shop_grid_product_img">
                <img src="img/product_1_11.png" alt="" class="img-fluid">
                <img src="img/tag-2.png" alt="" class="tag_2">
@@ -466,8 +466,8 @@
                </div>
                <p>$125.65</p>
             </div>
-         </div>
-         <div class="col-lg-3 shop_grid_product_item">
+           </div>
+           <div class="col-lg-3 shop_grid_product_item">
             <div class="shop_grid_product_img">
                <img src="img/product_1_12.png" alt="" class="img-fluid">
                <div class="shop_grid_product_icon_btn">
@@ -491,9 +491,26 @@
                <p>$125.65</p>
             </div>
          </div>
+         </div>
 
-         <div class="col-lg-3">
-            
+         <div class="row justify-content-center">
+             <div class="col-lg-4">
+               <nav aria-label="...">
+                  <ul class="pagination">
+                    <li class="page-item">
+                      <a class="page-link" href="#" tabindex="-1" aria-disabled="true"><i class="fa-solid fa-arrow-left-long"></i>Previous</a>
+                    </li>
+                    <li class="page-item active_pn"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item" aria-current="page">
+                      <a class="page-link" href="#">2</a>
+                    </li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item">
+                      <a class="page-link" href="#">Next <i class="fa-solid fa-arrow-right-long"></i></a>
+                    </li>
+                  </ul>
+                </nav>
+             </div>
          </div>
         </div>
         </div>
@@ -595,6 +612,9 @@
         </div>
      </footer>
      <!-- Footer section end  -->
+     <button id="backToTop">
+      <i class="fa-solid fa-arrow-up"></i>
+     </button>
 
     <!-- main jquary link  -->
     <script src="js/jquery-3.6.1.min.js"></script>
