--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
           <div class="collapse navbar-collapse" id="mymenu">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link" aria-current="page" href="#" data-bs-toggle="dropdown">Shop<i class="fa-solid 
@@ -97,7 +97,7 @@
                    fa-chevron-down"></i></a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="about.html">shop-1</a></li>
-                    <li><a class="dropdown-item" href="#">shop-2</a></li>
+                    <li><a class="dropdown-item" href="shopGrid.html">shop-2</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="#">shop-3</a></li>
                 </ul>
@@ -526,6 +526,9 @@
        </div>
     </footer>
     <!-- Footer section end  -->
+    <button id="backToTop">
+      <i class="fa-solid fa-arrow-up"></i>
+    </button>
 
     <!-- main jquary link  -->
     <script src="js/jquery-3.6.1.min.js"></script>
