--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="collapse navbar-collapse" id="mymenu">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link" aria-current="page" href="#" data-bs-toggle="dropdown">Shop<i class="fa-solid 
